force-app/main/default/objects/XactlyExpress__XCChatterSettings__c/XactlyExpress__XCChatterSettings__c.object-meta.xml
<CustomObject>
    <label>XCChatterSetting</label>
    <nameField>
        <label>XCChatterSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCChatterSettings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>