force-app/main/default/objects/XactlyExpress__XCChatterSettings__c/fields/XactlyExpress__CalculationGroup__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CalculationGroup__c</fullName>
    <label>CalculationGroup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>