force-app/main/default/objects/XactlyExpress__XCChatterSettings__c/fields/XactlyExpress__CalculationNotification__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CalculationNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CalculationNotification</label>
    <type>Checkbox</type>
</CustomField>