force-app/main/default/objects/XactlyExpress__XCChatterSettings__c/fields/XactlyExpress__ImportNotification__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ImportNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ImportNotification</label>
    <type>Checkbox</type>
</CustomField>