force-app/main/default/objects/XactlyExpress__XCChatterSettings__c/fields/XactlyExpress__PeriodClosedGroup__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PeriodClosedGroup__c</fullName>
    <label>PeriodClosedGroup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>