force-app/main/default/objects/XactlyExpress__XCChatterSettings__c/fields/XactlyExpress__PeriodClosedMessage__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PeriodClosedMessage__c</fullName>
    <label>PeriodClosedMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>